<resources>
    <string name="app_name">Score</string>
    <string name="zhifubao">支付宝</string>
    <string name="hello_test">你好</string>
    <string name="test">测试</string>
    <string name="logo">Android</string>
    <string name="userNameHint">请输入账号</string>
    <string name="passwordHint">请输入密码</string>
    <string name="login">登录</string>
    <string name="todo">TODO</string>
    <string name="xiafang">注册</string>
    <string name="TaoBaoDeLu">淘宝账号登录</string>
    <string name="WangJiMiMa">忘记密码？</string>
    <string name="PlainText">请输入用户名</string>
    <string name="anniu">男</string>
    <string name="anniu1">女</string>
    <string name="quedingmima">确认密码</string>
    <string name="Phone">手机号/邮箱</string>
    <string name="jiesou">接收消息信息</string>
    <string name="checkbox">CheckBox</string>
    <string name="shengming">同意本软件的用户服务协议和隐私政策</string>
    <string name="calculator" />
    <string name="delete">AC</string>
    <string name="divide">%</string>
    <string name="C">C</string>
    <string name="prep">+</string>
    <string name="subtract">-</string>
    <string name="ride">x</string>
    <string name="sign">√</string>
    <string name="equalto">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="eliminate">÷</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Ninetales">九尾妖狐</string>
    <string name="Alia">阿狸</string>
    <string name="Master">法师</string>
    <string name="Assassin">刺客</string>
    <string name="Physics">物理攻击</string>
    <string name="magic">魔法攻击</string>
    <string name="defense">防御能力</string>
    <string name="difficulty">上手难度</string>
    <string name="button_ok">确定</string>
    <string name="button_switch">开关</string>
    <string name="button_left">左边</string>
    <string name="button_right">右边</string>
    <string name="radio_apple">Apple</string>
    <string name="edit_number">输入数值</string>
    <string name="java">Java</string>
    <string name="sql">SQL</string>
    <string name="android">Android</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="appraize">星评价</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="add1">+1</string>
    <string name="add2">+2</string>
    <string name="add3">+3</string>
    <string name="Zero">0</string>
    <string name="Lgoin">登录成功</string>
    <string name="Nickname">昵称</string>
    <string name="Gender">性别</string>
    <string name="phone">手机号码</string>
    <string name="News">接收消息推送</string>
    <string name="UpdateYourPassword">更新密码</string>
    <string name="NewPassword">新密码</string>
    <string name="newpwd">新密码</string>
    <string name="OnePwd">再次输入新密码</string>
    <string name="edit_phone">手机</string>
    <string name="Forget_pwd">忘记密码</string>
</resources>
