<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="bottom|end"
            android:verticalScrollbarPosition="right">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMinTextSize="36dp"
                android:text="@string/sign"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/C"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/delete"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/seven"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/eight"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/nine"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/prep"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/four"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/five"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/six"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/subtract"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/One"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/Two"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/Three"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button21"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/ride"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button26"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/zero"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/dot"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/equalto"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="36dp"
                android:text="@string/eliminate"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>